--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,29 @@
-# backend/Dockerfile
+# Use an official slim Python base image
 FROM python:3.11-slim
 
+# Set environment variables to avoid interactive prompts and enable UTF-8
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
+
+# Set working directory
 WORKDIR /app
 
-COPY ./app /app
+# Install system dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    libpq-dev \
+ && rm -rf /var/lib/apt/lists/*
+
+# Install Python dependencies early to leverage Docker layer caching
+COPY ./app/requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy the rest of the application code
+COPY ./app .
+
+# Expose port (optional but recommended for clarity)
+EXPOSE 8000
+
+# Start the FastAPI app
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
