--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,29 +1,20 @@
-# Use an official slim Python base image
+# Use official Python slim image
 FROM python:3.11-slim
-
-# Set environment variables to avoid interactive prompts and enable UTF-8
-ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1
 
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
-    libpq-dev \
- && rm -rf /var/lib/apt/lists/*
+# Copy requirements.txt into the container
+COPY requirements.txt .
 
-# Install Python dependencies early to leverage Docker layer caching
-COPY ./app/requirements.txt .
-
+# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application code
+# Copy the rest of the app code
 COPY . .
 
-# Expose port (optional but recommended for clarity)
+# Expose FastAPI's default port
 EXPOSE 8000
 
-# Start the FastAPI app
+# Run the app
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
